--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,18 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/9b9764c0be.js" crossorigin="anonymous"></script>
-
-
-  <title>Jobz</title>
+  <title>Pizza</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
 </body>
 
 </html>
